bp: Cleanup Redundant Futures in Recovery Code
https://github.com/elastic/elasticsearch/commit/6742d9c9d9049eacd9158815cab57b82046e8743